# zfskeyprovider

./: .fpm  .gitignore  LICENSE  README.md  project.toml  pyproject.toml  zfs-load-cryptkey.conf  zfs-load-cryptkey.service  zfs-load-cryptkey.sh  zfs-load-key.conf  zfs-load-key.service  zfs-load-key.sh  zfskeyprovider.conf  zfskeyprovider.py  zfskeyprovider.service  zfskeyprovider.toml
.github/workflows/: check.yml  package.yml
examples/: zfs-load-key.service  zfskeyprovider.service
packaging/: postinst.sh  postremove.sh  preremove.sh
vzekeyprovider/: main.py
zfskeyprovider/: main.py
