[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zfskeyprovider"
version = "0.1.0"
description = "Server providing encrypted zfs key to partner host"
authors = [{name = "Fabian Wenzel", email = "pypi@sky.brightspace.de"}]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
